kubernetes/hw-ingress-host.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: training
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  namespace: training
spec:
  selector:
    matchLabels:
      app: helloworld
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld
        env: production
        author: karthequian
        tiers: front
        version: "1.0"
    spec:
      containers:
        - name: helloworld
          image: karthequian/helloworld:blue
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  namespace: training
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: helloworld
---
# Provisionner une adresse IP statique globale pour l'Ingress
# gcloud compute addresses create helloworld-ip --global
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: training
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "helloworld-ip"
    networking.gke.io/managed-certificates: "helloworld-cert"
spec:
  ingressClassName: gce
  rules:
    - host: hello.upskillforge.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helloworld-service
                port:
                  number: 80
